# Compiler

./: .gitignore  CMakeLists.txt  README.md
assembly_functions/: new.txt  print.txt  template.txt
bag_programms/: binary_search.mj  binary_tree.mj  bubble_sort.mj  factorial.mj  linear_search.mj  linked_list.mj  mj_prog_1.mj  quick_sort.mj  tree_visitor.mj
bag_programms/bad_type/: binary_search.mj  linked_list.mj  tree_visitor.mj
programms/: factorial.mj  quick_sort.mj  tree_visitor.mj
src/: Declaration.h  JavaHelp.h  MinijavaTree.h  Utils.cpp  bison.cpp  bison.output  bison.y  flex.cpp  flex.l  main.cpp  minijava.y  minijava_types.h  tokens.h  tokens_processing.cpp  tokens_processing.h
src/IR/translate/: translate.hpp
src/IR/tree/: Expressions.hpp  IRTree.hpp  IdHolder.cpp  Statements.hpp
src/Instruction/: ControlFlowGraph.cpp  ControlFlowGraph.h  Instruction.cpp  Instruction.h  InstructionOperations.cpp  InstructionOperations.hpp  RegisterMapper.h  VarInteractGraph.cpp  VarInteractGraph.h
src/Utils/: ConsolePrinter.hpp
src/frame/: Frame.hpp  Temp.cpp  Temp.hpp
src/symbol/: Symbol.h
src/tree/: Assignment.h  CPrinter.cpp  CPrinter.h  Constant.h  Declaration.h  Expression.h  Indentifier.h  Invocation.h  Location.h  MinijavaTree.h  NewExpression.h  Statment.h  TreeBuildHelp.h  Type.h  Visitor.h
src/visitors/: CIRTreeBuilder.cpp  CIRTreeBuilder.h  CPrettyPrinter.cpp  CPrettyPrinter.hpp  CPrinter.cpp  CPrinter.h  CPrinter2.cpp  CPrinter2.hpp  TypeChecker.cpp  TypeChecker.h  accept_visitor_template.hpp  template_visitor.hpp
src/visitors/IRtree/: CIRTreeCanonizator.cpp  CIRTreeCanonizator.h  CIRTreeCodeGenerator.cpp  CIRTreeCodeGenerator.h  CIRTreeJumpOptimizer.cpp  CIRTreeJumpOptimizer.h  CIRTreeLin.cpp  CIRTreeLin.h  CIRTreeLinearizator.cpp  CIRTreeLinearizator.h  CIRTreePrinter.cpp  CIRTreePrinter.hpp  IIRTreeVisitor.hpp
src/visitors/type_checking/: SymbolTableBuilder.cpp  SymbolTableBuilder.h  Table.h  TypeChecker.cpp  TypeChecker.h
tests/: CMakeLists.txt
tests/basic_tests/: CIRTreeCanonizatorTests.cpp  CMakeLists.txt  basic_check.cpp
